# metagemma

./: .gitignore  AGENTS.md  README.md  confidence_trace.py  main.py  project_settings.json  pyproject.toml  train.py
confidence_frontend/: app.js  index.html  styles.css
confidence_serving/: README.md  pyproject.toml
confidence_serving/confidence_serving/: __init__.py  generate.py  model_loader.py  server.py  settings.py  smoke_test.py
data_generation/: confidence_trace.py  dataset_specs.py  generate_coding_traces.py  generate_trace.py  inspect_coding_traces.py  pyproject.toml  scorers.py
fine_tuning/: confidence_trace.py  finetune.py  pyproject.toml
inference_server/: README.md  package.json  pyproject.toml  tsconfig.json
inference_server/inference_server/: __main__.py  generate.py  model_loader.py  server.py  settings.py  smoke_test.py
inference_server/static/: app.js  app.ts  index.html  styles.css
reinforcement_learning/: find_lm_studio_sudoku_puzzle.py  gemma4_unsloth.py  pyproject.toml
reinforcement_learning/experiments/: hey_length_smoke.py  sudoku_curriculum_train.py  sudoku_single_puzzle_smoke.py
reinforcement_learning/rl_trainer/: __init__.py  advantages.py  callbacks.py  config.py  data.py  generation.py  logprobs.py  losses.py  optim.py  rewards.py  sudoku.py  tensors.py  trainer.py  types.py
reinforcement_learning/tasks/sudoku/: __init__.py  curriculum.py  dataset.py  generator.py  parsing.py  prompts.py  rewards.py  types.py  validation.py
sandbox_harness/: README.md  REQUIREMENTS.md  pyproject.toml
sandbox_harness/src/sandbox_harness/: __init__.py  backends.py  bootstrap.py  episodes.py  prompt.py  runner.py  serialization.py  tools.py  traces.py  types.py
sandbox_harness/tests/: test_backends.py  test_bootstrap.py  test_prompt.py  test_runner.py  test_serialization.py  test_tools.py
scripts/: bootstrap_remote.sh  remote_config.sh  ssh_remote.sh  sync_remote.sh  sync_remote_artifacts.sh  update_remote_instance.sh
tokenizers/gemma-4-E2B-it/: tokenizer_config.json
