[project]
name = "unicorn-mafia-confidence-serving"
version = "0.1.0"
description = "Minimal confidence-aware inference server."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.0",
    "peft>=0.19.1",
    "pydantic>=2.12.0",
    "torch>=2.7.0",
    "transformers>=5.5.1,<6",
    "uvicorn>=0.38.0",
]

[project.scripts]
confidence-server = "confidence_serving.server:main"
confidence-smoke-test = "confidence_serving.smoke_test:main"

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
