[project]
name = "unicorn-mafia-data-generation"
version = "0.1.0"
description = "Trace generation for confidence fine-tuning."
requires-python = ">=3.12,<3.14"
dependencies = [
    "datasets>=4.4.1",
    "math-verify>=0.9.0",
    "numpy>=2.0.0",
    "pyarrow>=22.0.0",
    "transformers>=5.5.1,<6",
    "vllm>=0.17.0",
]

[tool.uv.sources]
vllm = [
    { index = "pypi", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
