[project]
name = "unicorn-mafia-fine-tuning"
version = "0.1.0"
description = "Confidence fine-tuning over generated trace shards."
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "math-verify>=0.9.0",
    "numpy>=2.0.0",
    "peft>=0.19.1",
    "pyarrow>=22.0.0",
    "torch>=2.7.0",
    "transformers>=4.56.0,<5",
    "trl>=1.2.0",
    "wandb>=0.23.0",
]

[project.optional-dependencies]
conv1d = [
    "causal-conv1d>=1.6.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
