[project]
name = "reinforcement-learning"
version = "0.1.0"
description = "Unsloth GRPO training for Gemma 4 E2B-it Sudoku reinforcement learning."
requires-python = ">=3.12,<3.14"
dependencies = [
    "bitsandbytes",
    "datasets",
    "numpy",
    "pillow",
    "safetensors",
    "timm",
    "tokenizers",
    "torch>=2.8.0",
    "torchvision",
    "transformers>=5.5.0,<6",
    "triton>=3.4.0",
    "triton-kernels",
    "trl>=0.28.0",
    "unsloth[base]",
    "unsloth-zoo[base]",
]

[tool.uv]
package = false
override-dependencies = [
    "trl>=0.28.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
triton-kernels = { git = "https://github.com/triton-lang/triton.git", rev = "0add68262ab0a2e33b84524346cb27cbb2787356", subdirectory = "python/triton_kernels" }
unsloth = { git = "https://github.com/unslothai/unsloth" }
unsloth-zoo = { git = "https://github.com/unslothai/unsloth-zoo" }

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
