[project]
name = "agent-sandbox-harness"
version = "0.1.0"
description = "Reusable sandbox and tool harness for coding-agent episodes."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "sandbox_harness"
module-root = "src"
